# sd-image-sorter

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  README.md  UNFINISHED.md  fix.bat  pyproject.toml  release-notes.md  report.md  run.bat  run.sh  update.bat
.github/workflows/: ci.yml
.kiro/steering/: backend-launch.md  ci-protocol.md
backend/: aesthetic.py  ai_runtime_guard.py  app_diagnostics.py  app_info.py  app_security.py  app_static.py  artist_identifier.py  ccip.py  censor.py  censor_transforms.py  civitai_extractor.py  color_analyzer.py  config.py  config_settings.py  constants.py  database.py  db_collections.py  db_core.py  db_facets.py  db_helpers.py  db_images_lookup.py  db_images_paginate.py  db_images_query.py  db_images_read.py  db_images_write.py  db_images_write_attributes.py  db_images_write_lifecycle.py  db_images_write_upsert.py  db_library_roots.py  db_query.py  db_query_base.py  db_query_columns.py  db_query_filters.py  db_query_filters_exclude.py  db_query_post.py  db_reconnect_reviews.py  db_schema.py  db_tag_scores.py  db_tags.py  exceptions.py  (+60 more)
backend/artist/: __init__.py  assets.py  default_artists.py  device.py  downloads.py  runtime_paths.py
backend/assets/: README.md  danbooru_implications.csv
backend/db_repos/: __init__.py
backend/metadata_parser/: __init__.py  _exif_validation.py  _runtime.py  alt_generators.py  constants.py  exif_xmp.py  model_assets.py  novelai.py  webui.py
backend/migrations/: 001_baseline.py  002_legacy_schema_upgrade.py  003_legacy_backfills.py  004_image_time_semantics.py  005_checkpoint_normalization.py  006_prompt_token_index.py  007_path_lookup_casefold_index.py  008_compact_persisted_metadata.py  009_compact_raw_only_metadata.py  010_color_analysis_columns.py  011_purge_leaked_test_rows.py  012_purge_vlm_garbage_tags.py  013_purge_residual_test_pollution.py  014_perf_filter_indexes.py  015_user_rating_column.py  016_library_roots_table.py  017_favorite_paths_table.py  018_nl_caption_column.py  019_sanitize_nl_captions.py  020_activity_log.py  021_reconnect_reviews_table.py  022_dominant_color_tags.py  023_raw_metadata_column.py  024_tag_source_category.py  025_tag_bulk_ops_journal.py  026_ai_rating_columns.py  027_tag_scores_table.py  README.md  __init__.py  _schema_common.py
backend/routers/: aesthetic.py  artists.py  censor.py  collections.py  colors.py  dataset.py  disk.py  duplicates.py  entry.py  favorites.py  images.py  masks.py  metadata_repair.py  models.py  obfuscation.py  prompts.py  publish.py  similarity.py  smart_tag.py  sorting.py  tags.py  tags_bulk.py  tags_bulk_journal_ops.py  tags_bulk_models.py  updates.py  vlm.py  vlm_batch_source.py  vlm_debug.py  vlm_models.py  vlm_ollama.py  vlm_persistence.py
backend/services/: __init__.py  _tagging_pipeline_persistence.py  aesthetic_service.py  ai_job_queue_store.py  artist_service.py  bulk_job_service.py  censor_service.py  character_purity_service.py  dataset_audit_service.py  dataset_consistency_service.py  dataset_export_service.py  dataset_naming.py  dataset_session_service.py  dataset_translate_cache.py  dataset_translate_models.py  dataset_translate_parsing.py  dataset_translate_providers.py  dataset_translate_service.py  dataset_vocab_service.py  derived_state_service.py  disk_service.py  duplicate_group_service.py  entry_stats_service.py  export_rating_quality.py  export_tag_pipeline.py  export_template_engine.py  export_template_presets.py  export_template_render.py  export_validation.py  image_metadata_writer.py  image_service.py  indexed_file_mutation_service.py  mask_service.py  metadata_repair_service.py  model_service.py  model_service_helpers.py  model_service_inventory.py  model_service_prepare.py  prompt_service.py  publish_service.py  (+20 more)
backend/tag_vocab/: __init__.py  builtin_rules.py  detail_keywords.py  detail_tokens.py  exact_sets.py  franchises.py  outfit.py
backend/tests/: __init__.py  conftest.py  manual_verify_tag_filtering.py  test_aesthetic_availability_cache.py  test_aesthetic_service.py  test_ai_rating_column.py  test_ai_runtime_guard.py  test_api_docs_contract.py  test_api_errors.py  test_architecture_contract.py  test_artist_diagnostics_legacy_path.py  test_artist_gpu_toggle.py  test_artist_identifier_pins.py  test_artist_identifier_runtime.py  test_batch_move_safety.py  test_browser_open.py  test_bulk_job_service.py  test_cache_bust.py  test_censor_output_integrity.py  test_censor_pins.py  test_censor_seg_decode.py  test_censor_service_pins.py  test_character_purity.py  test_ci_coverage_integrity.py  test_civitai_extractor.py  test_civitai_integration.py  (+159 more)
docs/: AI_DECISION_LOG.md  AI_PRINCIPLES.md  API.md  COMPETITOR_ROADMAP_BILLFISH_EAGLE.md  COVERAGE_LEDGER.md  DESIGN.md  LAZY_RELEASE_QA.md  MCP.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v3.0.2.md  RELEASE_NOTES_v3.0.3.md  RELEASE_NOTES_v3.0.4.md  RELEASE_NOTES_v3.0.5.md  RELEASE_NOTES_v3.0.6.md  RELEASE_NOTES_v3.1.0.md  RELEASE_NOTES_v3.1.5.md  RELEASE_NOTES_v3.1.6.md  RELEASE_NOTES_v3.2.1.md  RELEASE_NOTES_v3.2.2.md  RELEASE_NOTES_v3.2.3.md  RELEASE_NOTES_v3.2.4.md  RELEASE_NOTES_v3.3.0.md  RELEASE_NOTES_v3.3.1.md  RELEASE_NOTES_v3.3.2.md  RELEASE_NOTES_v3.3.3.md  RELEASE_NOTES_v3.3.4.md  RELEASE_NOTES_v3.4.0.md  RELEASE_NOTES_v3.4.1.md  RELEASE_NOTES_v3.4.2.md  RELEASE_NOTES_v3.4.3.md  RELEASE_NOTES_v3.5.0-beta.1.md  RELEASE_NOTES_v3.5.0.md  RELEASE_PACKS.md  RELEASE_SOP.md  TECHNICAL_DEBT_NOTES.md  WHY_CHOOSE_US.md  design-preview-v3.3.1.html  design-preview-v3.3.2-workbench.html
frontend/: index.html
models/: README.md
scripts/: audit_frontend_controls.py  build_release_packages.py  build_review_dataset.py  caption-editor-deep-test.js  capture-readme-screenshots.js  check_lockfiles.py  check_runtime_dependencies.py  coverage_gate.py  export_openapi.py  extract_workflow_fixture.py  frontend-integration-check.js  lazy_release_qa.py  run_ci.py  screenshot-autosep-workbench.js  screenshot-caption-editor.js  security_check.py  start-backend.ps1  workspace_lock.py
tests/: e2e-smoke.js
(+527 files in other folders)
