# Tooling-only config. No [project]/[build-system] tables: this repo is not a
# packaged distribution, so this file exists solely to configure ruff.

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Signal-heavy, low-noise gate. Pyflakes (F) catches real defects: unused
# imports/variables, undefined names, and f-string mistakes. E9 catches syntax
# errors. Pure-style pycodestyle rules (E4/E5/E7) are intentionally left out so
# the gate flags bugs, not formatting opinions, on this pre-existing codebase.
select = ["F", "E9"]

[tool.ruff.lint.per-file-ignores]
# database.py is a pure re-export facade (split out of the old monolith in the
# refactor(db) series). Its imports exist to expose the public surface, so they
# are intentionally "unused" inside the module itself.
"backend/database.py" = ["F401"]
# services/sorting_service.py is the compatibility facade for the
# services/sorting/ package split (2026-07). It deliberately keeps every
# historical import — the monkeypatch-seam names (verify_image_readable,
# scan_folder, move_image, copy_image, parse_metadata_job, add_images_batch)
# and the sorting_models / sorting_session_store re-exports — even where the
# facade body no longer calls them, because tests patch and import them at
# this path (tests/test_sorting_service_pins.py). Same rationale as
# database.py above.
"backend/services/sorting_service.py" = ["F401"]
# services/image_service.py is the compatibility facade for the
# services/image/ package split (2026-07). Same rationale as
# sorting_service.py above: the verbatim import block plus the
# _constants/_filters re-imports exist so every historical module attribute
# (db, move_file_to_trash, resolve_existing_indexed_image_path, the selection
# constants, the coercers/sanitizers) keeps resolving at
# services.image_service.<name> for tests that patch and read them there
# (tests/test_image_service_pins.py, tests/test_routers/test_images.py).
"backend/services/image_service.py" = ["F401"]
# tag_rules.py is the compatibility facade for the tag_vocab/ data-table split
# (2026-07). It re-imports every extracted table so the 8 production importers
# (`from tag_rules import <NAME>`) and the pin/monkeypatch seams
# (tests/test_tag_rules_pins.py, tests/test_tag_training_filters.py) keep
# resolving names on this module; BUILTIN_TAG_SETS / BUILTIN_EXCLUSION_RULES /
# WEIGHTED_GROUPS are pure re-exports the facade body itself never calls.
# Same rationale as database.py above.
"backend/tag_rules.py" = ["F401"]
# services/censor_service.py is the compatibility facade for the
# services/censor/ package split (2026-07). Same rationale as image_service.py
# above: the verbatim import block (incl. the model_health seam names
# get_model_health / get_default_legacy_model_path patched on this module
# object, db, save_and_reconcile_checked, resolve_existing_indexed_image_path)
# plus the _paths_match_runtime_case re-import exist so every historical module
# attribute keeps resolving at services.censor_service.<name> for tests that
# patch and read them there (tests/test_censor_service_pins.py,
# tests/test_routers/test_prompts_censor_similarity_artists.py,
# tests/test_resource_safety.py).
"backend/services/censor_service.py" = ["F401"]
# routers/images.py is the compatibility facade for the routers/images_parts/
# package split (2026-07). Same rationale as image_service.py above: the
# verbatim header import block (incl. the ``sys`` / ``subprocess`` module
# singletons the open-folder test patches through this namespace, and the
# typing/fastapi/pydantic names historical code may resolve here) plus the
# images_parts.models re-imports exist so every historical module attribute
# keeps resolving at routers.images.<name> for tests that patch and import
# them there (tests/test_images_router_pins.py, tests/test_routers/
# test_images.py:1838+2022, tests/test_reconnect_missing_files.py).
"backend/routers/images.py" = ["F401"]
# artist_identifier.py is the compatibility FILE facade for the artist/
# package split (2026-07). Same rationale as censor_service.py above: the
# verbatim header import block (incl. the ``urllib.request`` module singleton
# the runtime suite patches through this namespace as
# ``artist_identifier.urllib.request``) plus the artist.* re-imports exist so
# every historical module attribute keeps resolving at
# artist_identifier.<name> for tests that patch and read them there
# (tests/test_artist_identifier_pins.py, tests/test_artist_identifier_runtime.py,
# tests/test_artist_gpu_toggle.py, tests/test_artist_diagnostics_legacy_path.py,
# tests/test_model_service.py, tests/fixtures/ml_fixtures.py).
"backend/artist_identifier.py" = ["F401"]
# services/dataset_export_service.py is the compatibility FILE facade for the
# services/dataset_export/ package split (2026-07). Same rationale as
# censor_service.py above: the verbatim header import block (incl. the
# ``shutil`` / ``database`` module singletons tests patch through this
# namespace as ``export_service.shutil.copy2`` / ``des.db.update_image_path``,
# and the dataset_naming / tag_export_service / dataset_session_service /
# path_validation re-binds — ``render_stem`` is patched ON this module object
# and read back through _svc() by planning._plan_single_rename) plus the
# dataset_export.* re-imports exist so every historical module attribute keeps
# resolving at services.dataset_export_service.<name> for tests that patch and
# read them there (tests/test_dataset_export_pins.py,
# tests/test_dataset_export.py:149-164).
"backend/services/dataset_export_service.py" = ["F401"]
# tagger.py is the compatibility FILE facade for the tagger_* mixin split
# (2026-07). Same rationale as artist_identifier.py above: the verbatim header
# import block (incl. csv/json/PIL.Image/endpoint_label/get_hf_endpoint_order,
# now called only from the tagger_* mixins) is kept so every historical module
# attribute keeps resolving at tagger.<name> for tests that patch and read
# them there — tagger.ort / tagger.hf_hub / tagger._ensure_imports /
# tagger.DEFAULT_MODEL / tagger.MODELS (tests/test_tagger_pins.py,
# tests/test_tagger.py, tests/test_resource_safety.py,
# tests/fixtures/ml_fixtures.py).
"backend/tagger.py" = ["F401"]
# image_manager.py is the compatibility FILE facade for the
# image_manager_gates / image_manager_records / image_manager_executor
# sibling-module split (2026-07). Same rationale as censor_service.py above:
# the verbatim header import block stays — ThreadPoolExecutor /
# ProcessPoolExecutor are monkeypatch seams tests patch on this module object
# (tests/test_image_manager.py:783+) AND the names image_manager_executor
# resolves through this facade at call time; PARSED_METADATA_VERSION is
# re-exported for tests/test_image_manager_pins.py — plus the gates/records/
# executor re-imports exist so every historical module attribute keeps
# resolving at image_manager.<name> for the pin suite and for
# services/sorting/scan.py's image_manager_module.* reads.
"backend/image_manager.py" = ["F401"]
# similarity.py is the compatibility FILE facade for the similarity_* mixin
# split (2026-07). Same rationale as tagger.py above: the verbatim header
# import block stays — ``get_state_dir`` is autouse-patched on this module by
# tests/conftest.py:66 and read back through _svc() by
# similarity_vector_cache._get_index_dir (the split-killer seam);
# SIMILARITY_DEFAULT_LIMIT / SIMILARITY_DEFAULT_THRESHOLD /
# DUPLICATE_THRESHOLD / DUPLICATE_SYNC_MAX_EMBEDDINGS / DUPLICATE_CHUNK_SIZE
# and the ``similarity_ann`` module singleton are patch/pin surfaces the
# moved mixins resolve through this namespace — plus the similarity_errors /
# similarity_math re-imports exist so every historical module attribute (the
# 7 exception classes, bytes_to_embedding, cosine_similarity) keeps resolving
# at similarity.<name> for services.similarity_service,
# services.duplicate_group_service, model_health._clip_model_loaded, and the
# suites that patch and read them there (tests/test_similarity_pins.py,
# tests/test_resource_safety.py, tests/test_similarity_ann.py,
# tests/test_similarity_vector_cache.py).
"backend/similarity.py" = ["F401"]
# services/tag_export_service.py is the compatibility FILE facade for the
# services/tag_export/ package split (2026-07). Same rationale as
# dataset_export_service.py above: the verbatim header import block (incl. the
# ``database`` module singleton tests patch through this namespace as
# ``tag_export_service.db.<fn>`` in tests/test_resource_safety.py) plus the
# tag_export.* re-imports exist so every historical module attribute — the
# identity-shared objects (NL_COMPOSE_MODES / VALID_CONTENT_MODES /
# VALID_OUTPUT_MODES and the shared callables) that
# services.dataset_export_service and services/dataset_export/* origin-import
# from here, and the settable ``count_selection_token_ids`` seam patched by
# tests/test_routers/test_vlm.py — keeps resolving at
# services.tag_export_service.<name> (tests/test_tag_export_pins.py).
"backend/services/tag_export_service.py" = ["F401"]
# db_images_read.py is the compatibility FILE facade for the
# db_images_query / db_images_paginate / db_images_lookup sibling-module split
# (2026-07). Same rationale as database.py above: its import block exists so
# database.py's 21-name import (database.py:249, incl. the private
# _get_filtered_count) keeps resolving BY REFERENCE — the identity contract
# ``database.X is db_images_read.X`` and the shared connection-provider pin
# ``db_images_read.get_db is db_core.get_db`` are locked by
# tests/test_db_images_read_pins.py (TestReExportContract); the facade body
# itself calls none of them.
"backend/db_images_read.py" = ["F401"]
# db_query.py is the compatibility FILE facade for the db_query_columns /
# db_query_base / db_query_filters / db_query_filters_exclude / db_query_post
# sibling-module split (2026-07). Same rationale as database.py above: its
# import block exists so the four consumer namespaces keep resolving BY
# REFERENCE — db_images_query (38 names), db_images_paginate (36),
# db_images_lookup (2), and database.py (43), a 55-name identity union locked
# by tests/test_db_query_pins.py (TestReExportIdentityUnion), plus the
# _HAS_METADATA_CLAUSE constant historical code resolves here; the facade body
# itself calls none of them.
"backend/db_query.py" = ["F401"]
# Test bodies routinely bind a call result for readability/debugging even when
# the value is not asserted on; F841 stays enforced for production code (where
# a dead binding is a real smell) but is relaxed inside the test suite.
"backend/tests/**" = ["F841"]
